--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
 remote_user=root
-private_key_file = /home/sparsick/.ssh/id_hetzner_ansible_test
+private_key_file=/home/sparsick/.ssh/id_hetzner_ansible_test
